--- a/data/raw/gis/vlm4rs/human_annotation/paper_1.yaml
+++ b/data/raw/gis/vlm4rs/human_annotation/paper_1.yaml
@@ -79,10 +79,10 @@ blocks:
     topic_label: Image-Level Understanding Tasks
   - marker: '[3]'
     intent_label: Domain Overview
-    topic_label: Region-Level Interaction Tasks
+    topic_label: Image-Level Understanding Tasks
   - marker: '[4]'
     intent_label: Domain Overview
-    topic_label: Region-Level Interaction Tasks
+    topic_label: Image-Level Understanding Tasks
   - marker: '[5]–[8]'
     intent_label: Prior Methods
     topic_label: Image-Level Understanding Tasks
@@ -135,8 +135,8 @@ blocks:
     Video-based VQA is another promising trend [19].'
   citations:
   - marker: '[11]'
-    intent_label: Prior Methods
-    topic_label: Dataset Construction and Annotation
+    intent_label: Problem Formulation
+    topic_label: Task Scoping and Formulations
   - marker: '[15]'
     intent_label: Prior Methods
     topic_label: Attention-Based Fusion Blocks
@@ -150,10 +150,10 @@ blocks:
     intent_label: Prior Methods
     topic_label: Attention-Based Fusion Blocks
   - marker: '[18]'
-    intent_label: Prior Methods
-    topic_label: Region-Level Interaction Tasks
+    intent_label: Domain Overview
+    topic_label: Image-Level Understanding Tasks
   - marker: '[19]'
-    intent_label: Prior Methods
+    intent_label: Domain Overview
     topic_label: Multispectral and Temporal Modeling
 - block_id: 3
   content: 'VQA in remote sensing images, however, is still at its debut and the amount of contributions is sharply scarce.
@@ -205,10 +205,10 @@ blocks:
     topic_label: Spectral/Temporal Encoding and Masking
   - marker: '[27]'
     intent_label: Prior Methods
-    topic_label: Multispectral and Temporal Modeling
+    topic_label: Spectral/Temporal Encoding and Masking
   - marker: '[28]'
     intent_label: Prior Methods
-    topic_label: Pretraining Backbones and Modal Encoders
+    topic_label: Image-Level Understanding Tasks
   - marker: '[29]'
     intent_label: Prior Methods
     topic_label: Image-Level Understanding Tasks
@@ -269,10 +269,10 @@ blocks:
     topic_label: Pretraining Backbones and Modal Encoders
   - marker: '[32]'
     intent_label: Algorithm/Principle Adoption
-    topic_label: Attention-Based Fusion Blocks
+    topic_label: Other Topics
   - marker: '[33]'
     intent_label: Algorithm/Principle Adoption
-    topic_label: Attention-Based Fusion Blocks
+    topic_label: Other Topics
 - block_id: 7
   content: 'Let us consider {FXi, Fqi}_i=1^Ntr as the visual and textual representations obtained from CLIP, with FXi ∈ R^{1×196×512}
     and Fqi ∈ R^{1×77×512}. As mentioned previously, 196 and 77 represent the length of the visual and textual sequences,
@@ -377,10 +377,10 @@ blocks:
   citations:
   - marker: '[34]'
     intent_label: Resource Utilization
-    topic_label: Task-Specific Metrics and Protocols
+    topic_label: Other Topics
   - marker: '[35]'
     intent_label: Algorithm/Principle Adoption
-    topic_label: Training Signals and Objectives
+    topic_label: Other Topics
 - block_id: 12
   content: We train the model on the training set for three different trials with different initializations. Then, we present
     the averaged classification accuracies for these three trials along with the standard deviation. From Table I, we see
